unpackaged/main/default/objects/TriggerSettings__c/fields/AuthorizationForm__c.field-meta.xml
<CustomField>
    <fullName>AuthorizationForm__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AuthorizationForm</label>
    <type>Checkbox</type>
</CustomField>