unpackaged/main/default/objects/TriggerSettings__c/fields/AuthorizationFormConsent__c.field-meta.xml
<CustomField>
    <fullName>AuthorizationFormConsent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AuthorizationFormConsent</label>
    <type>Checkbox</type>
</CustomField>