unpackaged/main/default/objects/TriggerSettings__c/fields/AuthorizationFormText__c.field-meta.xml
<CustomField>
    <fullName>AuthorizationFormText__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AuthorizationFormText</label>
    <type>Checkbox</type>
</CustomField>