unpackaged/main/default/objects/TriggerSettings__c/fields/B2CCustomInput__c.field-meta.xml
<CustomField>
    <fullName>B2CCustomInput__c</fullName>
    <defaultValue>false</defaultValue>
    <label>B2CCustomInput</label>
    <type>Checkbox</type>
</CustomField>